AC_INIT([enigma2-skinspack],1.0.0,[andrew.blackburn644@btinternet.com])
AM_INIT_AUTOMAKE([foreign])

m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AM_PATH_PYTHON

AC_ARG_WITH(skins1080,
	AC_HELP_STRING([--with-skins1080], [machine support 1080p skins yes no]),
	[[withskins1080=$withval]],
	[[withskins1080=no]]
)
if test x"$withskins1080" != xno ; then
	AC_DEFINE(HAVE_SKINS1080, 1,[Define if machine support 1080p skins.])
fi
AM_CONDITIONAL(HAVE_SKINS1080, test x"$withskins1080" != xno)

A
AC_OUTPUT([
Makefile
src/Makefile

skins/src/converters/Makefile

skins/src/renderers/Makefile

skins/src/plugins/Makefile
skins/src/plugins/MyMetrix/Makefile
skins/src/plugins/MyMetrix/data/Makefile
skins/src/plugins/MyMetrix/email/Makefile
skins/src/plugins/MyMetrix/images/Makefile
skins/src/plugins/MyMetrix/locale/Makefile
skins/src/plugins/MyMetrix/locale/de/Makefile
skins/src/plugins/MyMetrix/locale/de/LC_MESSAGES/Makefile
skins/src/plugins/MyMetrix/skinparts/Makefile
skins/src/plugins/MyMetrix/skinparts/screens/Makefile
skins/src/plugins/MyMetrix/skinparts/screens/active/Makefile
skins/src/plugins/MyMetrix/skinparts/screens/inactive/Makefile
skins/src/plugins/MyMetrix/skinparts/screens/inactive/screen_105/Makefile
skins/src/plugins/MyMetrix/skinparts/screens/inactive/screen_108/Makefile
skins/src/plugins/MyMetrix/skinparts/screens/inactive/screen_109/Makefile
skins/src/plugins/MyMetrix/skinparts/screens/inactive/screen_118/Makefile
skins/src/plugins/MyMetrix/skinparts/screens/inactive/screen_121/Makefile
skins/src/plugins/MyMetrix/skinparts/screens/inactive/screen_122/Makefile
skins/src/plugins/MyMetrix/skinparts/screens/inactive/screen_172/Makefile
skins/src/plugins/MyMetrix/skinparts/widgets/Makefile
skins/src/plugins/MyMetrix/skinparts/widgets/active/Makefile
skins/src/plugins/MyMetrix/skinparts/widgets/inactive/Makefile
skins/src/plugins/MyMetrix/skinparts/widgets/inactive/widget_14/Makefile
skins/src/plugins/MyMetrix/skinparts/widgets/inactive/widget_16/Makefile
skins/src/plugins/MyMetrix/skinparts/widgets/inactive/widget_20/Makefile
skins/src/plugins/MyMetrix/skinparts/widgets/inactive/widget_23/Makefile
skins/src/plugins/MyMetrix/skinparts/widgets/inactive/widget_24/Makefile
skins/src/plugins/MyMetrix/skinparts/widgets/inactive/widget_27/Makefile
skins/src/plugins/MyMetrix/skinparts/widgets/inactive/widget_28/Makefile
skins/src/plugins/MyMetrix/skinparts/widgets/inactive/widget_29/Makefile
skins/src/plugins/MyMetrix/skinparts/widgets/inactive/widget_39/Makefile
skins/src/plugins/MyMetrix/skinparts/widgets/inactive/widget_103/Makefile
skins/src/plugins/MyMetrix/skinparts/widgets/inactive/widget_119/Makefile
skins/src/plugins/MyMetrix/skinparts/widgets/inactive/widget_120/Makefile
skins/src/plugins/MyMetrix/skinparts/widgets/inactive/widget_139/Makefile
skins/src/plugins/MyMetrix/skinparts/widgets/inactive/widget_141/Makefile
skins/src/plugins/MyMetrix/skinparts/widgets/inactive/widget_155/Makefile
skins/src/plugins/MyMetrix/skinparts/widgets/inactive/widget_169/Makefile
skins/src/plugins/MyMetrix/skintemplates/Makefile

skins/src/skins/Makefile
skins/src/skins/720/Makefile

skins/src/skins/720/Blue-HD/Makefile
skins/src/skins/720/Blue-HD/buttons/Makefile
skins/src/skins/720/Blue-HD/countries/Makefile
skins/src/skins/720/Blue-HD/epg/Makefile
skins/src/skins/720/Blue-HD/extensions/Makefile
skins/src/skins/720/Blue-HD/fonts/Makefile
skins/src/skins/720/Blue-HD/icons/Makefile
skins/src/skins/720/Blue-HD/infobar/Makefile
skins/src/skins/720/Blue-HD/ondemand/Makefile
skins/src/skins/720/Blue-HD/piconbg/Makefile
skins/src/skins/720/Blue-HD/screens/Makefile
skins/src/skins/720/Blue-HD/spinner/Makefile

skins/src/skins/720/Magic-HD/Makefile
skins/src/skins/720/Magic-HD/border/Makefile
skins/src/skins/720/Magic-HD/buttons/Makefile
skins/src/skins/720/Magic-HD/dvr/Makefile
skins/src/skins/720/Magic-HD/epg/Makefile
skins/src/skins/720/Magic-HD/fonts/Makefile
skins/src/skins/720/Magic-HD/icons/Makefile
skins/src/skins/720/Magic-HD/infobar/Makefile
skins/src/skins/720/Magic-HD/window/Makefile

skins/src/skins/720/Magic-SD/Makefile
skins/src/skins/720/Magic-SD/buttons/Makefile
skins/src/skins/720/Magic-SD/crossepg/Makefile
skins/src/skins/720/Magic-SD/dvr/Makefile
skins/src/skins/720/Magic-SD/epg/Makefile
skins/src/skins/720/Magic-SD/fonts/Makefile
skins/src/skins/720/Magic-SD/icons/Makefile
skins/src/skins/720/Magic-SD/infobar/Makefile
skins/src/skins/720/Magic-SD/logos/Makefile
skins/src/skins/720/Magic-SD/piconbg/Makefile
skins/src/skins/720/Magic-SD/window/Makefile

skins/src/skins/720/MetrixHD/Makefile
skins/src/skins/720/MetrixHD/buttons/Makefile
skins/src/skins/720/MetrixHD/buttonsHD/Makefile
skins/src/skins/720/MetrixHD/colors/Makefile
skins/src/skins/720/MetrixHD/Default/Makefile
skins/src/skins/720/MetrixHD/Default/SkinDesign
skins/src/skins/720/MetrixHD/epg/Makefile
skins/src/skins/720/MetrixHD/extensions/Makefile
skins/src/skins/720/MetrixHD/fonts/Makefile
skins/src/skins/720/MetrixHD/icons/Makefile
skins/src/skins/720/MetrixHD/icons/message/Makefile
skins/src/skins/720/MetrixHD/icons/picons/Makefile
skins/src/skins/720/MetrixHD/iconsHD/Makefile
skins/src/skins/720/MetrixHD/iconsHD/message/Makefile
skins/src/skins/720/MetrixHD/iconsHD/picons/Makefile
skins/src/skins/720/MetrixHD/menu/Makefile
skins/src/skins/720/MetrixHD/mmp/Makefile
skins/src/skins/720/MetrixHD/skin_default/Makefile
skins/src/skins/720/MetrixHD/skin_default/buttons/Makefile
skins/src/skins/720/MetrixHD/skin_default/icons/Makefile
skins/src/skins/720/MetrixHD/SkinDesign/Makefile

skins/src/skins/720/Red-HD/Makefile
skins/src/skins/720/Red-HD/buttons/Makefile
skins/src/skins/720/Red-HD/countries/Makefile
skins/src/skins/720/Red-HD/crossepg/Makefile
skins/src/skins/720/Red-HD/epg/Makefile
skins/src/skins/720/Red-HD/extensions/Makefile
skins/src/skins/720/Red-HD/fonts/Makefile
skins/src/skins/720/Red-HD/icons/Makefile
skins/src/skins/720/Red-HD/infobar/Makefile
skins/src/skins/720/Red-HD/ondemand/Makefile
skins/src/skins/720/Red-HD/screens/Makefile
skins/src/skins/720/Red-HD/selectionbars/Makefile
skins/src/skins/720/Red-HD/spinner/Makefile

skins/src/skins/720/ViX-Common/Makefile
skins/src/skins/720/ViX-Common/buttons/Makefile

skins/src/skins/720/ViX-Day-HD/Makefile
skins/src/skins/720/ViX-Day-HD/crossepg/Makefile
skins/src/skins/720/ViX-Day-HD/epg/Makefile
skins/src/skins/720/ViX-Day-HD/icons/Makefile
skins/src/skins/720/ViX-Day-HD/infobar/Makefile
skins/src/skins/720/ViX-Day-HD/menu/Makefile
skins/src/skins/720/ViX-Day-HD/screens/Makefile

skins/src/skins/720/ViX-Night-HD/Makefile
skins/src/skins/720/ViX-Night-HD/crossepg/Makefile
skins/src/skins/720/ViX-Night-HD/epg/Makefile
skins/src/skins/720/ViX-Night-HD/icons/Makefile
skins/src/skins/720/ViX-Night-HD/menu/Makefile

skins/src/skins/1080
skins/src/skins/1080/Makefile

skins/src/skins/1080/MetrixFHD/Makefile
skins/src/skins/1080/MetrixFHD/buttons/Makefile
skins/src/skins/1080/MetrixFHD/buttonsHD/Makefile
skins/src/skins/1080/MetrixFHD/colors/Makefile
skins/src/skins/1080/MetrixFHD/Default/Makefile
skins/src/skins/1080/MetrixFHD/Default/SkinDesign
skins/src/skins/1080/MetrixFHD/epg/Makefile
skins/src/skins/1080/MetrixFHD/extensions/Makefile
skins/src/skins/1080/MetrixFHD/fonts/Makefile
skins/src/skins/1080/MetrixFHD/icons/Makefile
skins/src/skins/1080/MetrixFHD/icons/message/Makefile
skins/src/skins/1080/MetrixFHD/icons/picons/Makefile
skins/src/skins/1080/MetrixFHD/iconsHD/Makefile
skins/src/skins/1080/MetrixFHD/iconsHD/message/Makefile
skins/src/skins/1080/MetrixFHD/iconsHD/picons/Makefile
skins/src/skins/1080/MetrixFHD/menu/Makefile
skins/src/skins/1080/MetrixFHD/mmp/Makefile
skins/src/skins/1080/MetrixFHD/skin_default/Makefile
skins/src/skins/1080/MetrixFHD/skin_default/buttons/Makefile
skins/src/skins/1080/MetrixFHD/skin_default/icons/Makefile
skins/src/skins/1080/MetrixFHD/SkinDesign/Makefile

skins/src/skins/1080/myNOVUM_FHD2/Makefile
skins/src/skins/1080/myNOVUM_FHD2/busy/Makefile
skins/src/skins/1080/myNOVUM_FHD2/buttons/Makefile
skins/src/skins/1080/myNOVUM_FHD2/common_icons/Makefile
skins/src/skins/1080/myNOVUM_FHD2/countries/Makefile
skins/src/skins/1080/myNOVUM_FHD2/epg/Makefile
skins/src/skins/1080/myNOVUM_FHD2/extensions/Makefile
skins/src/skins/1080/myNOVUM_FHD2/fonts/Makefile
skins/src/skins/1080/myNOVUM_FHD2/icons/Makefile
skins/src/skins/1080/myNOVUM_FHD2/images/Makefile
skins/src/skins/1080/myNOVUM_FHD2/images/pvrstate/Makefile
skins/src/skins/1080/myNOVUM_FHD2/menu/Makefile
skins/src/skins/1080/myNOVUM_FHD2/mmp/Makefile
skins/src/skins/1080/myNOVUM_FHD2/skin_default/Makefile
skins/src/skins/1080/myNOVUM_FHD2/skin_default/buttons/Makefile
skins/src/skins/1080/myNOVUM_FHD2/SkinDesign/Makefile
skins/src/skins/1080/myNOVUM_FHD2/spinner/Makefile
skins/src/skins/1080/myNOVUM_FHD2/WeatherIcons/Makefile

skins/src/skins/1080/myNOVUM_FHD2_Black/Makefile
skins/src/skins/1080/myNOVUM_FHD2_Black/busy/Makefile
skins/src/skins/1080/myNOVUM_FHD2_Black/buttons/Makefile
skins/src/skins/1080/myNOVUM_FHD2_Black/common_icons/Makefile
skins/src/skins/1080/myNOVUM_FHD2_Black/countries/Makefile
skins/src/skins/1080/myNOVUM_FHD2_Black/epg/Makefile
skins/src/skins/1080/myNOVUM_FHD2_Black/extensions/Makefile
skins/src/skins/1080/myNOVUM_FHD2_Black/fonts/Makefile
skins/src/skins/1080/myNOVUM_FHD2_Black/icons/Makefile
skins/src/skins/1080/myNOVUM_FHD2_Black/images/Makefile
skins/src/skins/1080/myNOVUM_FHD2_Black/images/pvrstate/Makefile
skins/src/skins/1080/myNOVUM_FHD2_Black/menu/Makefile
skins/src/skins/1080/myNOVUM_FHD2_Black/mmp/Makefile
skins/src/skins/1080/myNOVUM_FHD2_Black/skin_default/Makefile
skins/src/skins/1080/myNOVUM_FHD2_Black/skin_default/buttons/Makefile
skins/src/skins/1080/myNOVUM_FHD2_Black/SkinDesign/Makefile
skins/src/skins/1080/myNOVUM_FHD2_Black/spinner/Makefile
skins/src/skins/1080/myNOVUM_FHD2_Black/WeatherIcons/Makefile

skins/src/skins/1080/NOVUM_FHD_Slim/Makefile
skins/src/skins/1080/NOVUM_FHD_Slim/busy/Makefile
skins/src/skins/1080/NOVUM_FHD_Slim/buttons/Makefile
skins/src/skins/1080/NOVUM_FHD_Slim/common_icons/Makefile
skins/src/skins/1080/NOVUM_FHD_Slim/countries/Makefile
skins/src/skins/1080/NOVUM_FHD_Slim/epg/Makefile
skins/src/skins/1080/NOVUM_FHD_Slim/extensions/Makefile
skins/src/skins/1080/NOVUM_FHD_Slim/fonts/Makefile
skins/src/skins/1080/NOVUM_FHD_Slim/icons/Makefile
skins/src/skins/1080/NOVUM_FHD_Slim/images/Makefile
skins/src/skins/1080/NOVUM_FHD_Slim/images/pvrstate/Makefile
skins/src/skins/1080/NOVUM_FHD_Slim/menu/Makefile
skins/src/skins/1080/NOVUM_FHD_Slim/mmp/Makefile
skins/src/skins/1080/NOVUM_FHD_Slim/skin_default/Makefile
skins/src/skins/1080/NOVUM_FHD_Slim/skin_default/buttons/Makefile
skins/src/skins/1080/NOVUM_FHD_Slim/SkinDesign/Makefile
skins/src/skins/1080/NOVUM_FHD_Slim/spinner/Makefile
skins/src/skins/1080/NOVUM_FHD_Slim/WeatherIcons/Makefile

skins/src/skins/1080/ViXBMC_1080/Makefile
skins/src/skins/1080/ViXBMC_1080/buttons/Makefile
skins/src/skins/1080/ViXBMC_1080/countries/Makefile
skins/src/skins/1080/ViXBMC_1080/crossepg/Makefile
skins/src/skins/1080/ViXBMC_1080/epg/Makefile
skins/src/skins/1080/ViXBMC_1080/extensions/Makefile
skins/src/skins/1080/ViXBMC_1080/fonts/Makefile
skins/src/skins/1080/ViXBMC_1080/icons/Makefile
skins/src/skins/1080/ViXBMC_1080/imdb/Makefile
skins/src/skins/1080/ViXBMC_1080/infobar/Makefile
skins/src/skins/1080/ViXBMC_1080/menuicons/Makefile
skins/src/skins/1080/ViXBMC_1080/networkbrowser/Makefile
skins/src/skins/1080/ViXBMC_1080/pvr/Makefile
skins/src/skins/1080/ViXBMC_1080/screens/Makefile
skins/src/skins/1080/ViXBMC_1080/spinner/Makefile
skins/src/skins/1080/ViXBMC_1080/vixcore/Makefile

skins/src/skins/1080/ViXBMC_1080_Bello/Makefile
skins/src/skins/1080/ViXBMC_1080_Bello/buttons/Makefile
skins/src/skins/1080/ViXBMC_1080_Bello/countries/Makefile
skins/src/skins/1080/ViXBMC_1080_Bello/crossepg/Makefile
skins/src/skins/1080/ViXBMC_1080_Bello/epg/Makefile
skins/src/skins/1080/ViXBMC_1080_Bello/extensions/Makefile
skins/src/skins/1080/ViXBMC_1080_Bello/fonts/Makefile
skins/src/skins/1080/ViXBMC_1080_Bello/icons/Makefile
skins/src/skins/1080/ViXBMC_1080_Bello/imdb/Makefile
skins/src/skins/1080/ViXBMC_1080_Bello/infobar/Makefile
skins/src/skins/1080/ViXBMC_1080_Bello/networkbrowser/Makefile
skins/src/skins/1080/ViXBMC_1080_Bello/pvr/Makefile
skins/src/skins/1080/ViXBMC_1080_Bello/screens/Makefile
skins/src/skins/1080/ViXBMC_1080_Bello/spinner/Makefile
skins/src/skins/1080/ViXBMC_1080_Bello/vixcore/Makefile

skins/src/skins/1080/YouViX-Blue/Makefile
skins/src/skins/1080/YouViX-Blue/buttons/Makefile
skins/src/skins/1080/YouViX-Blue/countries/Makefile
skins/src/skins/1080/YouViX-Blue/crossepg/Makefile
skins/src/skins/1080/YouViX-Blue/epg/Makefile
skins/src/skins/1080/YouViX-Blue/extensions/Makefile
skins/src/skins/1080/YouViX-Blue/icons/Makefile
skins/src/skins/1080/YouViX-Blue/infobar/Makefile
skins/src/skins/1080/YouViX-Blue/networkbrowser/Makefile
skins/src/skins/1080/YouViX-Blue/screens/Makefile
skins/src/skins/1080/YouViX-Blue/selectionbars/Makefile
skins/src/skins/1080/YouViX-Blue/spinner/Makefile
skins/src/skins/1080/YouViX-Blue/vixcore/Makefile

skins/src/skins/1080/YouViX-Common/Makefile
skins/src/skins/1080/YouViX-Common/fonts/Makefile
skins/src/skins/1080/YouViX-Common/icons/Makefile
skins/src/skins/1080/YouViX-Common/imdb/Makefile
skins/src/skins/1080/YouViX-Common/infobar/Makefile
skins/src/skins/1080/YouViX-Common/logos/Makefile
skins/src/skins/1080/YouViX-Common/menuicons/Makefile
skins/src/skins/1080/YouViX-Common/ondemand/Makefile
skins/src/skins/1080/YouViX-Common/pvr/Makefile
skins/src/skins/1080/YouViX-Common/screens/Makefile
skins/src/skins/1080/YouViX-Common/spinner/Makefile

skins/src/skins/1080/YouViX-Green/Makefile
skins/src/skins/1080/YouViX-Green/buttons/Makefile
skins/src/skins/1080/YouViX-Green/countries/Makefile
skins/src/skins/1080/YouViX-Green/crossepg/Makefile
skins/src/skins/1080/YouViX-Green/epg/Makefile
skins/src/skins/1080/YouViX-Green/extensions/Makefile
skins/src/skins/1080/YouViX-Green/icons/Makefile
skins/src/skins/1080/YouViX-Green/infobar/Makefile
skins/src/skins/1080/YouViX-Green/networkbrowser/Makefile
skins/src/skins/1080/YouViX-Green/screens/Makefile
skins/src/skins/1080/YouViX-Green/selectionbars/Makefile
skins/src/skins/1080/YouViX-Green/spinner/Makefile
skins/src/skins/1080/YouViX-Green/vixcore/Makefile

skins/src/skins/1080/YouViX-Purple/Makefile
skins/src/skins/1080/YouViX-Purple/buttons/Makefile
skins/src/skins/1080/YouViX-Purple/countries/Makefile
skins/src/skins/1080/YouViX-Purple/crossepg/Makefile
skins/src/skins/1080/YouViX-Purple/epg/Makefile
skins/src/skins/1080/YouViX-Purple/extensions/Makefile
skins/src/skins/1080/YouViX-Purple/icons/Makefile
skins/src/skins/1080/YouViX-Purple/infobar/Makefile
skins/src/skins/1080/YouViX-Purple/networkbrowser/Makefile
skins/src/skins/1080/YouViX-Purple/screens/Makefile
skins/src/skins/1080/YouViX-Purple/selectionbars/Makefile
skins/src/skins/1080/YouViX-Purple/spinner/Makefile
skins/src/skins/1080/YouViX-Purple/vixcore/Makefile

skins/src/skins/1080/YouViX-Red/Makefile
skins/src/skins/1080/YouViX-Red/buttons/Makefile
skins/src/skins/1080/YouViX-Red/countries/Makefile
skins/src/skins/1080/YouViX-Red/crossepg/Makefile
skins/src/skins/1080/YouViX-Red/epg/Makefile
skins/src/skins/1080/YouViX-Red/extensions/Makefile
skins/src/skins/1080/YouViX-Red/icons/Makefile
skins/src/skins/1080/YouViX-Red/infobar/Makefile
skins/src/skins/1080/YouViX-Red/networkbrowser/Makefile
skins/src/skins/1080/YouViX-Red/screens/Makefile
skins/src/skins/1080/YouViX-Red/selectionbars/Makefile
skins/src/skins/1080/YouViX-Red/spinner/Makefile
skins/src/skins/1080/YouViX-Red/vixcore/Makefile
])
